// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WebappDeploy 1`] = `
Object {
  "Parameters": Object {
    "AssetParametersb4364cdff91f3392b915bd217a17749ed1895be082393346acd6c6c26d8550c6ArtifactHashB910DE6A": Object {
      "Description": "Artifact hash for asset \\"b4364cdff91f3392b915bd217a17749ed1895be082393346acd6c6c26d8550c6\\"",
      "Type": "String",
    },
    "AssetParametersb4364cdff91f3392b915bd217a17749ed1895be082393346acd6c6c26d8550c6S3BucketBC214346": Object {
      "Description": "S3 bucket for asset \\"b4364cdff91f3392b915bd217a17749ed1895be082393346acd6c6c26d8550c6\\"",
      "Type": "String",
    },
    "AssetParametersb4364cdff91f3392b915bd217a17749ed1895be082393346acd6c6c26d8550c6S3VersionKey8C006EF9": Object {
      "Description": "S3 key for asset version \\"b4364cdff91f3392b915bd217a17749ed1895be082393346acd6c6c26d8550c6\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "CallerRole7E4BBD59": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "AWS": "*",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "CallerRoleDefaultPolicyECDC9714": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "WebappDeploy4D661524",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "CallerRoleDefaultPolicyECDC9714",
        "Roles": Array [
          Object {
            "Ref": "CallerRole7E4BBD59",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "WebappDeploy4D661524": Object {
      "DependsOn": Array [
        "WebappDeployServiceRoleDefaultPolicyE446530F",
        "WebappDeployServiceRole78F79841",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersb4364cdff91f3392b915bd217a17749ed1895be082393346acd6c6c26d8550c6S3BucketBC214346",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersb4364cdff91f3392b915bd217a17749ed1895be082393346acd6c6c26d8550c6S3VersionKey8C006EF9",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersb4364cdff91f3392b915bd217a17749ed1895be082393346acd6c6c26d8550c6S3VersionKey8C006EF9",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Environment": Object {
          "Variables": Object {
            "CF_DISTRIBUTION_ID": "EKJ2IPY1KTEAR1",
            "DEPLOY_LOG_BUCKET_URL": "s3://web-bucket/deployments.log",
            "EXPIRE_SECONDS": "432000",
            "TARGET_BUCKET_URL": "s3://web-bucket/web",
          },
        },
        "Handler": "webapp_deploy.main.handler",
        "ReservedConcurrentExecutions": 1,
        "Role": Object {
          "Fn::GetAtt": Array [
            "WebappDeployServiceRole78F79841",
            "Arn",
          ],
        },
        "Runtime": "python3.8",
        "Timeout": 120,
      },
      "Type": "AWS::Lambda::Function",
    },
    "WebappDeployServiceRole78F79841": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "WebappDeployServiceRoleDefaultPolicyE446530F": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "cloudfront:CreateInvalidation",
              "Effect": "Allow",
              "Resource": "*",
            },
            Object {
              "Action": Array [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
                "s3:DeleteObject*",
                "s3:PutObject*",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::web-bucket",
                    ],
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::web-bucket/*",
                    ],
                  ],
                },
              ],
            },
            Object {
              "Action": Array [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::builds-bucket",
                    ],
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::builds-bucket/*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "WebappDeployServiceRoleDefaultPolicyE446530F",
        "Roles": Array [
          Object {
            "Ref": "WebappDeployServiceRole78F79841",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
}
`;

exports[`WebappDeploy with source 1`] = `
Object {
  "Parameters": Object {
    "AssetParameters11a850054982c7a762dfcb33f4b473b67940073fd1db01635b64b04c0529ba0dArtifactHash80EE9514": Object {
      "Description": "Artifact hash for asset \\"11a850054982c7a762dfcb33f4b473b67940073fd1db01635b64b04c0529ba0d\\"",
      "Type": "String",
    },
    "AssetParameters11a850054982c7a762dfcb33f4b473b67940073fd1db01635b64b04c0529ba0dS3Bucket3E962F58": Object {
      "Description": "S3 bucket for asset \\"11a850054982c7a762dfcb33f4b473b67940073fd1db01635b64b04c0529ba0d\\"",
      "Type": "String",
    },
    "AssetParameters11a850054982c7a762dfcb33f4b473b67940073fd1db01635b64b04c0529ba0dS3VersionKey0C75EEFB": Object {
      "Description": "S3 key for asset version \\"11a850054982c7a762dfcb33f4b473b67940073fd1db01635b64b04c0529ba0d\\"",
      "Type": "String",
    },
    "AssetParameters48be1f8516ade54ba72e36a3f42565c479b1daa69b4b3872a6c5215ab64f1ef5ArtifactHash5A1A7B75": Object {
      "Description": "Artifact hash for asset \\"48be1f8516ade54ba72e36a3f42565c479b1daa69b4b3872a6c5215ab64f1ef5\\"",
      "Type": "String",
    },
    "AssetParameters48be1f8516ade54ba72e36a3f42565c479b1daa69b4b3872a6c5215ab64f1ef5S3Bucket3F1C919D": Object {
      "Description": "S3 bucket for asset \\"48be1f8516ade54ba72e36a3f42565c479b1daa69b4b3872a6c5215ab64f1ef5\\"",
      "Type": "String",
    },
    "AssetParameters48be1f8516ade54ba72e36a3f42565c479b1daa69b4b3872a6c5215ab64f1ef5S3VersionKey59C86469": Object {
      "Description": "S3 key for asset version \\"48be1f8516ade54ba72e36a3f42565c479b1daa69b4b3872a6c5215ab64f1ef5\\"",
      "Type": "String",
    },
    "AssetParametersb4364cdff91f3392b915bd217a17749ed1895be082393346acd6c6c26d8550c6ArtifactHashB910DE6A": Object {
      "Description": "Artifact hash for asset \\"b4364cdff91f3392b915bd217a17749ed1895be082393346acd6c6c26d8550c6\\"",
      "Type": "String",
    },
    "AssetParametersb4364cdff91f3392b915bd217a17749ed1895be082393346acd6c6c26d8550c6S3BucketBC214346": Object {
      "Description": "S3 bucket for asset \\"b4364cdff91f3392b915bd217a17749ed1895be082393346acd6c6c26d8550c6\\"",
      "Type": "String",
    },
    "AssetParametersb4364cdff91f3392b915bd217a17749ed1895be082393346acd6c6c26d8550c6S3VersionKey8C006EF9": Object {
      "Description": "S3 key for asset version \\"b4364cdff91f3392b915bd217a17749ed1895be082393346acd6c6c26d8550c6\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "AWS679f53fac002430cb0da5b7982bd22872D164C4C": Object {
      "DependsOn": Array [
        "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters11a850054982c7a762dfcb33f4b473b67940073fd1db01635b64b04c0529ba0dS3Bucket3E962F58",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters11a850054982c7a762dfcb33f4b473b67940073fd1db01635b64b04c0529ba0dS3VersionKey0C75EEFB",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters11a850054982c7a762dfcb33f4b473b67940073fd1db01635b64b04c0529ba0dS3VersionKey0C75EEFB",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2",
            "Arn",
          ],
        },
        "Runtime": "nodejs12.x",
        "Timeout": 120,
      },
      "Type": "AWS::Lambda::Function",
    },
    "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "WebappDeploy4D661524": Object {
      "DependsOn": Array [
        "WebappDeployServiceRoleDefaultPolicyE446530F",
        "WebappDeployServiceRole78F79841",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersb4364cdff91f3392b915bd217a17749ed1895be082393346acd6c6c26d8550c6S3BucketBC214346",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersb4364cdff91f3392b915bd217a17749ed1895be082393346acd6c6c26d8550c6S3VersionKey8C006EF9",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersb4364cdff91f3392b915bd217a17749ed1895be082393346acd6c6c26d8550c6S3VersionKey8C006EF9",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Environment": Object {
          "Variables": Object {
            "CF_DISTRIBUTION_ID": "EKJ2IPY1KTEAR1",
            "DEPLOY_LOG_BUCKET_URL": "s3://example-bucket/deployments.log",
            "EXPIRE_SECONDS": "432000",
            "TARGET_BUCKET_URL": "s3://example-bucket/web",
          },
        },
        "Handler": "webapp_deploy.main.handler",
        "ReservedConcurrentExecutions": 1,
        "Role": Object {
          "Fn::GetAtt": Array [
            "WebappDeployServiceRole78F79841",
            "Arn",
          ],
        },
        "Runtime": "python3.8",
        "Timeout": 120,
      },
      "Type": "AWS::Lambda::Function",
    },
    "WebappDeployCustomResourceCF959726": Object {
      "DeletionPolicy": "Delete",
      "DependsOn": Array [
        "WebappDeployCustomResourceCustomResourcePolicyB85F7B61",
      ],
      "Properties": Object {
        "Create": Object {
          "Fn::Join": Array [
            "",
            Array [
              "{\\"service\\":\\"Lambda\\",\\"action\\":\\"invoke\\",\\"physicalResourceId\\":{\\"id\\":\\"webapp-deploy\\"},\\"parameters\\":{\\"FunctionName\\":\\"",
              Object {
                "Ref": "WebappDeploy4D661524",
              },
              "\\",\\"Payload\\":\\"{\\\\\\"artifactS3Url\\\\\\":\\\\\\"s3://",
              Object {
                "Ref": "AssetParameters48be1f8516ade54ba72e36a3f42565c479b1daa69b4b3872a6c5215ab64f1ef5S3Bucket3F1C919D",
              },
              "/",
              Object {
                "Fn::Select": Array [
                  0,
                  Object {
                    "Fn::Split": Array [
                      "||",
                      Object {
                        "Ref": "AssetParameters48be1f8516ade54ba72e36a3f42565c479b1daa69b4b3872a6c5215ab64f1ef5S3VersionKey59C86469",
                      },
                    ],
                  },
                ],
              },
              Object {
                "Fn::Select": Array [
                  1,
                  Object {
                    "Fn::Split": Array [
                      "||",
                      Object {
                        "Ref": "AssetParameters48be1f8516ade54ba72e36a3f42565c479b1daa69b4b3872a6c5215ab64f1ef5S3VersionKey59C86469",
                      },
                    ],
                  },
                ],
              },
              "\\\\\\"}\\"}}",
            ],
          ],
        },
        "InstallLatestAwsSdk": false,
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "AWS679f53fac002430cb0da5b7982bd22872D164C4C",
            "Arn",
          ],
        },
        "Update": Object {
          "Fn::Join": Array [
            "",
            Array [
              "{\\"service\\":\\"Lambda\\",\\"action\\":\\"invoke\\",\\"physicalResourceId\\":{\\"id\\":\\"webapp-deploy\\"},\\"parameters\\":{\\"FunctionName\\":\\"",
              Object {
                "Ref": "WebappDeploy4D661524",
              },
              "\\",\\"Payload\\":\\"{\\\\\\"artifactS3Url\\\\\\":\\\\\\"s3://",
              Object {
                "Ref": "AssetParameters48be1f8516ade54ba72e36a3f42565c479b1daa69b4b3872a6c5215ab64f1ef5S3Bucket3F1C919D",
              },
              "/",
              Object {
                "Fn::Select": Array [
                  0,
                  Object {
                    "Fn::Split": Array [
                      "||",
                      Object {
                        "Ref": "AssetParameters48be1f8516ade54ba72e36a3f42565c479b1daa69b4b3872a6c5215ab64f1ef5S3VersionKey59C86469",
                      },
                    ],
                  },
                ],
              },
              Object {
                "Fn::Select": Array [
                  1,
                  Object {
                    "Fn::Split": Array [
                      "||",
                      Object {
                        "Ref": "AssetParameters48be1f8516ade54ba72e36a3f42565c479b1daa69b4b3872a6c5215ab64f1ef5S3VersionKey59C86469",
                      },
                    ],
                  },
                ],
              },
              "\\\\\\"}\\"}}",
            ],
          ],
        },
      },
      "Type": "Custom::AWS",
      "UpdateReplacePolicy": "Delete",
    },
    "WebappDeployCustomResourceCustomResourcePolicyB85F7B61": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "WebappDeploy4D661524",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "WebappDeployCustomResourceCustomResourcePolicyB85F7B61",
        "Roles": Array [
          Object {
            "Ref": "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "WebappDeployServiceRole78F79841": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "WebappDeployServiceRoleDefaultPolicyE446530F": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "cloudfront:CreateInvalidation",
              "Effect": "Allow",
              "Resource": "*",
            },
            Object {
              "Action": Array [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
                "s3:DeleteObject*",
                "s3:PutObject*",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::example-bucket",
                    ],
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::example-bucket/*",
                    ],
                  ],
                },
              ],
            },
            Object {
              "Action": Array [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      Object {
                        "Ref": "AssetParameters48be1f8516ade54ba72e36a3f42565c479b1daa69b4b3872a6c5215ab64f1ef5S3Bucket3F1C919D",
                      },
                    ],
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      Object {
                        "Ref": "AssetParameters48be1f8516ade54ba72e36a3f42565c479b1daa69b4b3872a6c5215ab64f1ef5S3Bucket3F1C919D",
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "WebappDeployServiceRoleDefaultPolicyE446530F",
        "Roles": Array [
          Object {
            "Ref": "WebappDeployServiceRole78F79841",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
}
`;
